--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 						<li class="active"><a href="index.html">Contents</a></li>
 						<li><a href="profile.html">Profile</a></li>
 						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
+						<li><a href="https://sites.google.com/site/gutugutu30/">備忘録</a></li>
 						
 					</ul>
 				</div>
