--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,7 @@
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<style type="text/css">
 		body {
 			padding-top: 80px;
@@ -24,7 +25,7 @@
 <body>
 	<header>
 		<div class="navbar navbar-default navbar-fixed-top">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="navbar-header">
 					<a href="/" class="navbar-brand">gutugutu3030</a>
 					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
@@ -37,6 +38,9 @@
 					<ul class="nav navbar-nav">
 						<li><a href="index.html">Contents</a></li>
 						<li class="active"><a href="profile.html">Profile</a></li>
+						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
+						<li><a href="https://sites.google.com/site/gutugutu30/">備忘録</a></li>
+						
 					</ul>
 				</div>
 			</div>
