--- a/profile.html
+++ b/profile.html
@@ -73,6 +73,10 @@
 					<li><a href="http://miyashita.com/">宮下研究室</a>座敷童</li>
 					<li><i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com</li>
 				</ul>
+				<ul style="list-style-type:none;">
+					<li>趣味：電子工作・プログラミング</li>
+					<li>使用可能言語・環境：Java・Processing・Arduino・(nodeJS・puredata・HSP)</li>
+				</ul>
 			</div>
 		</div>
 		<div>
