--- a/contents/somen/index.html
+++ b/contents/somen/index.html
@@ -65,31 +65,18 @@
 		<section>
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>概要</h2>
-					<p>流しそうめんって音ゲーに似てませんか？</p>
-					<p>って思ったので作ってみました</p>
-				</div>
-				<div class="col-sm-6">
 					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_xPJkJJuWGk" frameborder="0" allowfullscreen></iframe>
 						frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
-			</div>
-		</section>
-		<section>
-			<div class="row">
-				<div class="col-sm-5">
-					<div class="thumbnail">
-						<img src="system.png">
-						<div class="caption">
-							<p>システム</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-7">
+				<div class="col-sm-6">
+					<h2>概要</h2>
+					<p>流しそうめんって音ゲーに似てませんか？</p>
+					<p>って思ったので作ってみました</p>
 					<h2>システム</h2>
-					<p></p>
+					<p>Stepmaniaという音ゲーの譜面をProcessingで読み込んでいる．そして，譜面にしたがって4つあるDCモータを用いてベルトコンベアを回している．ベルトコンベアにそうめんを乗せるのは手作業となる．</p>
+					<p>最初の試行では，早すぎてそうめんが全くキャッチ出来なかったり，譜面が複雑でそうめんをベルトコンベアに乗せる方が間に合わなかったりした．そこで譜面の単純化を行ったが，そうめんを取ることができても，忙しくて食べられなかった．</p>
 				</div>
 			</div>
 		</section>
