--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gutugutu3030</title>
+	<title>gutugutu3030 - Processing RealtimeMode</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -20,7 +20,8 @@
 		}
 		
 		.panelHeader {
-			color: rgb(33, 125, 187);;
+			color: rgb(33, 125, 187);
+			;
 		}
 	</style>
 	<!--&#91;if lt IE 9&#93;>
@@ -48,7 +49,7 @@
 						<li><a href="profile.html">Profile</a></li>
 						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
 						<li><a href="https://sites.google.com/site/gutugutu30/">備忘録</a></li>
-						
+
 					</ul>
 				</div>
 			</div>
@@ -62,7 +63,7 @@
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/realtimeProcessing/index.html">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Processimg RealtimeMode</h3>
+								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Processing RealtimeMode</h3>
 							</a>
 						</div>
 						<div class="panel-body">
@@ -111,7 +112,7 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
-							<a href="contents/numericKeypad/index.html">
+							<a href="https://sites.google.com/site/gutugutu30/other/tenkiwojietishitegaizaosuru" target="_blank">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> オリジナルテンキー</h3>
 							</a>
 						</div>
@@ -145,7 +146,7 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
-							<a href="contents/duelDisk/index.html">
+							<a href="https://www.youtube.com/watch?v=zhnDp2Jem9s" target="_blank">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> デュエルディスク</h3>
 							</a>
 						</div>
@@ -162,7 +163,7 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
-							<a href="contents/Hako/index.html">
+							<a href="https://www.youtube.com/watch?v=ZBfd_9pjG98" target="_blank">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Hako</h3>
 							</a>
 						</div>
@@ -179,7 +180,7 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
-							<a href="contents/ARmodeling/index.html">
+							<a href="https://www.youtube.com/watch?v=pb9ExH-FXCY" target="_blank">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> ARモデリングツール</h3>
 							</a>
 						</div>
@@ -196,9 +197,7 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
-							<a href="contents/battleLine/index.html">
-								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> BattleLine</h3>
-							</a>
+							<h3 class="panel-title"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span> BattleLine</h3>
 						</div>
 						<div class="panel-body">
 							<img src="contents/battleLine/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
