--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gutugutu3030 - Processing RealtimeMode</title>
+	<title>gutugutu3030</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
