--- a/profile.html
+++ b/profile.html
@@ -75,6 +75,7 @@
 				</ul>
 				<ul style="list-style-type:none;">
 					<li>趣味：電子工作・プログラミング</li>
+					<li>興味分野：HCI，タンジブルインターフェース</li>
 					<li>使用可能言語・環境：Java・Processing・Arduino・(nodeJS・puredata・HSP)</li>
 				</ul>
 			</div>
