--- a/contents/realtimeProcessing/index.html
+++ b/contents/realtimeProcessing/index.html
@@ -48,10 +48,18 @@
 				</div>
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="../../index.html">Contents</a></li>
-						<li><a href="../../profile.html">Profile</a></li>
+						<li class="active dropdown">
+							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="index.html">Products</a></li>
+								<li><a href="library.html">Libraries</a></li>
+							</ul>
+						</li>
+
+						<li><a href="profile.html">Profile</a></li>
 						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
 						<li><a href="https://sites.google.com/site/gutugutu30/">備忘録</a></li>
+
 					</ul>
 				</div>
 			</div>
