--- a/contents/realtimeProcessing/index.html
+++ b/contents/realtimeProcessing/index.html
@@ -49,10 +49,10 @@
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<ul class="nav navbar-nav">
 						<li class="active dropdown">
-							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents <span class="caret"></span></a>
+							<a href="../../index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents <span class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="index.html">Products</a></li>
-								<li><a href="library.html">Libraries</a></li>
+								<li><a href="../../index.html">Products</a></li>
+								<li><a href="../../library.html">Libraries</a></li>
 							</ul>
 						</li>
 
