--- a/contents/ProjectronMapping/index.html
+++ b/contents/ProjectronMapping/index.html
@@ -56,7 +56,7 @@
 							</ul>
 						</li>
 
-						<li><a href="profile.html">Profile</a></li>
+						<li><a href="../../profile.html">Profile</a></li>
 						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
 						<li><a href="https://sites.google.com/site/gutugutu30/">備忘録</a></li>
 
