--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
-							<h3 class="panel-title"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span> BattleLine</h3>
+							<a href="library.html#battleLine" target="_blank">
+								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> BattleLine</h3>
+							</a>
 						</div>
 						<div class="panel-body">
 							<img src="contents/battleLine/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
