--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
-							<a href="library.html#battleLine" target="_blank">
+							<a href="library.html#battleLine">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> BattleLine</h3>
 							</a>
 						</div>
@@ -213,7 +213,7 @@
 							<div class="caption">
 								<p>線と線の戦い　ぶつかると死ぬ</p>
 								<p>最後まで生き残った方が勝ち　アイテムを上手く使って生き残れ！</p>
-								<p><small>2009/3~2011/10</small></p>
+								<p><small>2009/3~2011/12</small></p>
 							</div>
 						</div>
 					</div>
