--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
-							<h3 class="panel-title"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span> 画像変形ツール</h3>
+							<h3 class="panel-title">画像変形ツール</h3>
 						</div>
 						<div class="panel-body">
 							<img src="contents/imageDeformer/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
