--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
-							<h3 class="panel-title">画像変形ツール</h3>
+							<h3 class="panel-title" style="margin: 1px;">画像変形ツール</h3>
 						</div>
 						<div class="panel-body">
 							<img src="contents/imageDeformer/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
@@ -161,7 +161,7 @@
 							<img src="contents/duelDisk/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
 							<div class="caption">
 								<p>某アニメの決闘盤を再現</p>
-								<p>デュエルディスクにカードを挿入するとキャラクタが召喚される</p>
+								<p>デュエルディスクにカードを挿入するとキャラクタが召喚される(ソフトウェア担当)</p>
 								<p><small>2013/5</small></p>
 							</div>
 						</div>
@@ -204,6 +204,23 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
+							<a href="library.html#BanBanJar">
+								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> BanBanJar</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<img src="contents/banbanjar/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<div class="caption">
+								<p>キー入力をするとキャラクタがキーボードを叩く</p>
+								<p>Java初作品(友達と共同製作)</p>
+								<p><small>2009/8</small></p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
 							<a href="library.html#battleLine">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> BattleLine</h3>
 							</a>
@@ -218,8 +235,6 @@
 						</div>
 					</div>
 				</div>
-
-
 			</div>
 		</div>
 		<script src="js/jquery.min.js"></script>
