--- a/library.html
+++ b/library.html
@@ -225,6 +225,30 @@
 				</div>
 			</div>
 		</div>
+		<div class="panel panel-info" id="BanBanJar" name="BanBanJar">
+			<div class="panel-heading">
+				<h3 class="panel-title">BanBanJar</h3>
+			</div>
+			<div class="panel-body">
+				<div class="caption row">
+					<div class="col-sm-6">
+						<p>キー入力をするとウィンドウ内のキャラクタがキーボードを叩く素振りをします．</p>
+						<p>高1の高大連携講座で製作を行いました．</p>
+					</div>
+					<div class="col-sm-6">
+						<div class="alert alert-info" style="height: 100%;">
+							<h4>Download</h4>
+							<ul style="list-style-type:none;margin:0;padding:0;">
+								<li>
+									<a href="https://www.dropbox.com/s/zq0less9xiytgtu/banbanban.jar?dl=0" target="_blank"><i class="glyphicon glyphicon-download-alt"></i> banbanban.jar</a>
+								</li>
+							</ul>
+							<p><small>2009/8</small></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="panel panel-info" id="battleLine" name="battleLine">
 			<div class="panel-heading">
 				<h3 class="panel-title">BattleLine</h3>
