slideモード追加

--- a/library.html
+++ b/library.html
@@ -72,6 +72,33 @@
 
 		<div class="panel panel-info" id="imageTranslater" name="imageTranslater">
 			<div class="panel-heading">
+				<h3 class="panel-title">Processing 2.x プレゼンモード</h3>
+			</div>
+			<div class="panel-body">
+				<div class="caption row">
+					<div class="col-sm-6">
+						<p>画像ファイルを用いて，Processing上でプレゼンを行うことができるモードです．</p>
+						<p>画像ファイルは，パワーポイントを用いて出力したものを簡単に利用できるような仕様となっています．</p>
+						<p>詳しい使い方はgithubを御覧ください．</p>
+						<a href="https://github.com/gutugutu3030/SlideMode"
+						target="_blank"><i class="glyphicon glyphicon-info-sign"></i> もっと詳しく</a>
+					</div>
+					<div class="col-sm-6">
+						<div class="alert alert-info" style="height: 100%;">
+							<h4>Download</h4>
+							<ul style="list-style-type:none;margin:0;padding:0;">
+								<li>
+									<a href="https://www.dropbox.com/s/pu1neydfdxgk4kx/SlideMode.zip?dl=0" target="_blank"><i class="glyphicon glyphicon-download-alt"></i> SlideMode.zip</a>
+								</li>
+							</ul>
+							<p><small>2015/10</small></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="panel panel-info" id="imageTranslater" name="imageTranslater">
+			<div class="panel-heading">
 				<h3 class="panel-title">OpenCV-Java-Processing画像変換ライブラリ</h3>
 			</div>
 			<div class="panel-body">
@@ -159,7 +186,8 @@
 					<div class="col-sm-6">
 						<p>Javaから<a href="http://otonanokagaku.net/nsx39/" target="_blank">ポケットミク</a>を喋らせるためのライブラリです．</p>
 						<p>別途ポケットミクを用意する必要があります．</p>
-						<a href="https://sites.google.com/site/gutugutu30/other/pokettomikuwojiandannishieruyouniraiburariwozuottemitaprocessing%E3%83%BBjava" target="_blank"><i class="glyphicon glyphicon-info-sign"></i> もっと詳しく</a>
+						<a href="https://sites.google.com/site/gutugutu30/other/pokettomikuwojiandannishieruyouniraiburariwozuottemitaprocessing%E3%83%BBjava"
+						target="_blank"><i class="glyphicon glyphicon-info-sign"></i> もっと詳しく</a>
 					</div>
 					<div class="col-sm-6">
 						<div class="alert alert-info" style="height: 100%;">
