--- a/library.html
+++ b/library.html
@@ -70,7 +70,7 @@
 		</div>
 
 
-		<div class="panel panel-info" id="imageTranslater" name="imageTranslater">
+		<div class="panel panel-info" id="SlideMode" name="SlideMode">
 			<div class="panel-heading">
 				<h3 class="panel-title">Processing 2.x プレゼンモード</h3>
 			</div>
