--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<meta name="google-site-verification" content="G8Ld4AL7hUV0wr4ONAumt7CRVi5l8gZ3LO9CbFaaIoU" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>gutugutu3030</title>
 	<meta charset="utf-8">
