--- a/contents/ProjectronMapping/index.html
+++ b/contents/ProjectronMapping/index.html
@@ -67,7 +67,7 @@
 	</header>
 	<div class="container">
 		<section>
-			<h1>ProjectionMapping <small>プロジェクションマッピングによる電子工作体験支援</small></h1>
+			<h1>Projectron Mapping <small>プロジェクションマッピングによる電子工作体験支援</small></h1>
 		</section>
 		<section>
 			<div class="row">
