--- a/contents/ProjectronMapping/index.html
+++ b/contents/ProjectronMapping/index.html
@@ -146,6 +146,7 @@
 					<strong class="text-info">(SUI2014で招待デモ発表)</strong>
 				</li>
 				<li>秋山耀, 宮下芳明. プロジェクションマッピングによる電子工作体験支援. 日本バーチャルリアリティ学会論文誌, Vol.20, No.2, pp.83-86, 2015.
+					<a href="http://ci.nii.ac.jp/naid/40020528769" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
 					<a href="https://www.youtube.com/watch?v=N3dJ4XRDF1I" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
 				</li>
 			</ol>
