--- a/contents/DraggableBoard/index.html
+++ b/contents/DraggableBoard/index.html
@@ -97,15 +97,15 @@
 				</div>
 				<div class="col-sm-7">
 					<h2>システム</h2>
-					<p>提案システムはユニバーサル基板を模した形をしており，ドラッグ操作による結線・断線機能を持つ．今回は専用のペンを用いてユニバーサル基板上をなぞり，それを導線として使用する設計とした．</p>
-					<p>提案システムをPC上のアプリケーションと接続することで，回路作成支援を付加することが可能になる．接続中，ユーザはシステム上だけでなくPC 上でも回路を製作できる．基板の上部にプロジェクタを設置し，ユーザの行った配線を重畳表示する．</p>
+					<p>提案システムはユニバーサル基板を模した形をしており，ドラッグ操作による結線・断線機能を持つ．今回は専用のペンを用いてユニバーサル基板上をなぞり，それを導線として使用する設計とした．システムはリレーを用いて電気的な配線を行う．</p>
+					<p>提案システムをPC上のアプリケーションと接続することで，回路作成支援を付加することが可能になる．例えば，ユーザがショートの起こる配線を行った際，配線を行う代わりに爆発アニメーションを提示しショートを回避する機能を持つ．接続中，ユーザはシステム上だけでなくPC 上でも回路を製作できる．基板の上部にプロジェクタを設置し，ユーザの行った配線を重畳表示する．</p>
 				</div>
 			</div>
 		</section>
 			<h2>参考文献</h2>
 			<ol>
 				<li>秋山耀, 宮下芳明. ドラッグで配線できる基板による電子工作支援. 第23回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2015), 2015.
-					<a href="http://www.wiss.org/WISS2013Proceedings/demo/089.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
+					<a href="http://www.wiss.org/WISS2015Proceedings/demo/2-S02.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
 				</li>
 			</ol>
 		</section>
