--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
+							<a href="contents/DraggableBoard/index.html">
+								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> ドラッグで配線できる基板</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<img src="contents/DraggableBoard/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<div class="caption">
+								<p>なぞった部分にはリレーによって電気的な配線が行われ，通電するようになる</p>
+								<p>モータなどアクチュエータも動作可能</p>
+								<p><small>2015/12</small></p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
 							<a href="contents/realtimeProcessing/index.html">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Processing RealtimeMode</h3>
 							</a>
@@ -111,7 +129,7 @@
 							<img src="contents/imageDeformer/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
 							<div class="caption">
 								<p>画像・動画を変形でき，kinectと連携すれば自分の動きとキャラクタを同調できる</p>
-								<p>空間キーフレーム法使用(既存手法 再実装)</p>
+								<p>キーフレーム法使用(既存手法の再実装)</p>
 								<p><small>2014/5</small></p>
 							</div>
 						</div>
