--- a/contents/DraggableBoard/index.html
+++ b/contents/DraggableBoard/index.html
@@ -104,7 +104,7 @@
 		</section>
 			<h2>参考文献</h2>
 			<ol>
-				<li>秋山耀, 宮下芳明. ドラッグで配線できる基板による電子工作支援. 第23回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2015), 2015.
+				<li>秋山耀, 宮下芳明. ドラッグで配線できる基板による電子工作支援. 第23回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2015), pp.183-184, 2015.
 					<a href="http://www.wiss.org/WISS2015Proceedings/demo/2-S02.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
 				</li>
 			</ol>
