--- a/profile.html
+++ b/profile.html
@@ -123,7 +123,7 @@
 							<a href="http://www.wiss.org/WISS2014Proceedings/demo/086.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
 							<a href="https://www.youtube.com/watch?v=hM2Jfhzky48" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
 						</li>
-						<li>秋山耀, 宮下芳明. ドラッグで配線できる基板による電子工作支援. 第23回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2015), 2015.
+						<li>秋山耀, 宮下芳明. ドラッグで配線できる基板による電子工作支援. 第23回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2015), pp.183-184, 2015.
 							<a href="http://www.wiss.org/WISS2015Proceedings/demo/2-S02.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
 						</li>
 					</ol>
