--- a/profile.html
+++ b/profile.html
@@ -94,6 +94,7 @@
 				<li>査読付き学術論文
 					<ol>
 						<li>秋山耀, 宮下芳明. プロジェクションマッピングによる電子工作体験支援. 日本バーチャルリアリティ学会論文誌, Vol.20, No.2, pp.83-86, 2015.
+							<a href="https://www.dropbox.com/s/2shf337zay5omss/vr.pdf?dl=0" target="_blank"><i class="fa fa-file-pdf-o"></i></a>							
 							<a href="http://ci.nii.ac.jp/naid/40020528769" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
 							<a href="https://www.youtube.com/watch?v=N3dJ4XRDF1I" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
 						</li>
