--- a/library.html
+++ b/library.html
@@ -69,7 +69,33 @@
 			<p>バグなどを発見された場合は連絡をお願いします．</p>
 		</div>
 
-
+        <div class="panel panel-info" id="GPrintMode" name="GPrintMode">
+			<div class="panel-heading">
+				<h3 class="panel-title">Processing 2.x コンソールサーチモード</h3>
+			</div>
+			<div class="panel-body">
+				<div class="caption row">
+					<div class="col-sm-6">
+						<p>コンソールを少し便利にするモードです．</p>
+						<p>コンソールをクリックするとそれがどこのprintln記述によるものかを解析し，記述地点にジャンプしてくれます．</p>
+						<p>詳しい使い方はgithubを御覧ください．</p>
+						<a href="https://github.com/gutugutu3030/gprintMode"
+						target="_blank"><i class="glyphicon glyphicon-info-sign"></i> もっと詳しく</a>
+					</div>
+					<div class="col-sm-6">
+						<div class="alert alert-info" style="height: 100%;">
+							<h4>Download</h4>
+							<ul style="list-style-type:none;margin:0;padding:0;">
+								<li>
+									<a href="https://www.dropbox.com/s/5ogamroq70ywa4n/GreatPrintMode.zip?dl=0" target="_blank"><i class="glyphicon glyphicon-download-alt"></i> GreatPrintMode.zip</a>
+								</li>
+							</ul>
+							<p><small>2016/1</small></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="panel panel-info" id="SlideMode" name="SlideMode">
 			<div class="panel-heading">
 				<h3 class="panel-title">Processing 2.x プレゼンモード</h3>
