--- a/library.html
+++ b/library.html
@@ -68,7 +68,35 @@
 			<p>作成したライブラリやダウンロード可能コンテンツを公開しております．JavaやProcessingのためのライブラリがほとんどです．</p>
 			<p>バグなどを発見された場合は連絡をお願いします．</p>
 		</div>
-
+        
+        <div class="panel panel-info" id="CheatMode" name="CheatMode">
+			<div class="panel-heading">
+				<h3 class="panel-title">Processing 2.x カンニングモード</h3>
+			</div>
+			<div class="panel-body">
+				<div class="caption row">
+					<div class="col-sm-6">
+						<p>プログラムに任意のコードを実行時に挿入できるモードです．</p>
+						<p>マクロみたいなものを組めます．Processingをハックした気になれるお手軽モードです．</p>
+						<p>詳しい使い方はgithubを御覧ください．</p>
+						<a href="https://github.com/gutugutu3030/cheatMode"
+						target="_blank"><i class="glyphicon glyphicon-info-sign"></i> もっと詳しく</a>
+					</div>
+					<div class="col-sm-6">
+						<div class="alert alert-info" style="height: 100%;">
+							<h4>Download</h4>
+							<ul style="list-style-type:none;margin:0;padding:0;">
+								<li>
+									<a href="https://www.dropbox.com/s/olk1u6h1a90ejsj/CheatMode.zip?dl=0" target="_blank"><i class="glyphicon glyphicon-download-alt"></i> CheatMode.zip</a>
+								</li>
+							</ul>
+							<p><small>2016/2</small></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+        
         <div class="panel panel-info" id="GPrintMode" name="GPrintMode">
 			<div class="panel-heading">
 				<h3 class="panel-title">Processing 2.x コンソールサーチモード</h3>
