--- a/contents/DraggableBoard/index.html
+++ b/contents/DraggableBoard/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gutugutu3030 - Projectron Mapping</title>
+	<title>gutugutu3030 - ドラッグで配線できる基板による電子工作支援</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
