決闘盤　記事作成

--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
-							<a href="https://www.youtube.com/watch?v=zhnDp2Jem9s" target="_blank">
+							<a href="contents/duelDisk/index.html">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> デュエルディスク</h3>
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/duelDisk/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<img src="contents/duelDisk/thumbnail.png" class="img-responsive img-responsive-overwrite">
 							<div class="caption">
 								<p>某アニメの決闘盤を再現</p>
 								<p>デュエルディスクにカードを挿入するとキャラクタが召喚される(ソフトウェア担当)</p>
