--- a/profile.html
+++ b/profile.html
@@ -82,9 +82,9 @@
 					<li><i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com</li>
 				</ul>
 				<ul style="list-style-type:none;">
-					<li>趣味：電子工作・プログラミング</li>
-					<li>興味分野：HCI，タンジブルインタフェース，電子工作支援，プログラミング支援</li>
-					<li>使用可能言語・環境：Java・Processing・Arduino・(nodeJS・puredata・HSP)</li>
+					<li>趣味：電子工作・プログラミング・8mm映写機いじり</li>
+					<li>興味分野：HCI，タンジブルインタフェース，Fab，電子工作支援，プログラミング支援</li>
+					<li>使用可能言語・環境：Java・Processing・Arduino・(mbed・nodeJS・puredata・HSP)</li>
 				</ul>
 			</div>
 		</div>
