--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
+							<a href="https://github.com/gutugutu3030/gprintMode" target="_blank">
+								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Processing コンソールサーチモード</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<img src="contents/GPrint/thumbnail.gif" class="img-responsive img-responsive-overwrite">
+							<div class="caption">
+								<p>コンソールはただ表示するだけの箱ではない</p>
+								<p>コンソールをクリックするとそれがどこの記述によるものかを解析，記述地点にジャンプ</p>
+								<p><small>2016/1</small></p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
 							<a href="contents/DraggableBoard/index.html">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> ドラッグで配線できる基板</h3>
 							</a>
