--- a/library.html
+++ b/library.html
@@ -71,6 +71,32 @@
         
         <div class="panel panel-info" id="CheatMode" name="CheatMode">
 			<div class="panel-heading">
+				<h3 class="panel-title">typeS8mmPDFMaker</h3>
+			</div>
+			<div class="panel-body">
+				<div class="caption row">
+					<div class="col-sm-6">
+						<p>連番画像から8mmフィルム（Super8と同規格）のpdfを出力します．</p>
+						<p>OHPシートに印刷してご使用ください．</p>
+						<p class="text-warning"><i class="glyphicon glyphicon-warning-sign"></i> 製作途中です．</p>
+					</div>
+					<div class="col-sm-6">
+						<div class="alert alert-info" style="height: 100%;">
+							<h4>Download</h4>
+							<ul style="list-style-type:none;margin:0;padding:0;">
+								<li>
+									<a href="https://www.dropbox.com/s/0ekm3h81fiow7s7/s8pm.zip?dl=0" target="_blank"><i class="glyphicon glyphicon-download-alt"></i> s8pm.zip</a>
+								</li>
+							</ul>
+							<p><small>2016/4</small></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+        
+        <div class="panel panel-info" id="CheatMode" name="CheatMode">
+			<div class="panel-heading">
 				<h3 class="panel-title">Processing 2.x カンニングモード</h3>
 			</div>
 			<div class="panel-body">
