--- a/library.html
+++ b/library.html
@@ -69,7 +69,7 @@
 			<p>バグなどを発見された場合は連絡をお願いします．</p>
 		</div>
         
-        <div class="panel panel-info" id="CheatMode" name="CheatMode">
+        <div class="panel panel-info" id="s8pm" name="s8pm">
 			<div class="panel-heading">
 				<h3 class="panel-title">typeS8mmPDFMaker</h3>
 			</div>
