--- a/library.html
+++ b/library.html
@@ -69,6 +69,33 @@
 			<p>バグなどを発見された場合は連絡をお願いします．</p>
 		</div>
         
+        <div class="panel panel-info" id="HSP3DPrinter" name="HSP3DPrinter">
+			<div class="panel-heading">
+				<h3 class="panel-title">HSP3DPrinter</h3>
+			</div>
+			<div class="panel-body">
+				<div class="caption row">
+					<div class="col-sm-6">
+						<p>とても簡単に3DプリンタをHSPから制御できます．</p>
+						<p>現在楕円と矩形が造形できます．</p>
+						<a href="https://github.com/gutugutu3030/HSP3DPrinting"
+						target="_blank"><i class="glyphicon glyphicon-info-sign"></i> もっと詳しく</a>
+					</div>
+                    <div class="col-sm-6">
+						<div class="alert alert-info" style="height: 100%;">
+							<h4>Download</h4>
+							<ul style="list-style-type:none;margin:0;padding:0;">
+								<li>
+									<a href="https://github.com/gutugutu3030/HSP3DPrinting" target="_blank">GitHubから直接ご利用ください</a>
+								</li>
+							</ul>
+							<p><small>2016/4</small></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+        
         <div class="panel panel-info" id="s8pm" name="s8pm">
 			<div class="panel-heading">
 				<h3 class="panel-title">typeS8mmPDFMaker</h3>
