--- a/profile.html
+++ b/profile.html
@@ -131,7 +131,7 @@
 				</li>
 				
 				<li>その他
-					<ul>
+					<ul style="list-style-type:none;">
 						<li>卒論　部分グラフ同型アルゴリズムの実装と回路理解支援システムへの応用.
 							<a href="http://www.th.cs.meiji.ac.jp/researches/2015/akiyama/thesis.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
 						</li>
