--- a/library.html
+++ b/library.html
@@ -106,16 +106,21 @@
 						<p>連番画像から8mmフィルム（Super8と同規格）のpdfを出力します．</p>
 						<p>OHPシートに印刷してご使用ください．</p>
 						<p class="text-warning"><i class="glyphicon glyphicon-warning-sign"></i> 製作途中です．</p>
+						<a href="https://github.com/gutugutu3030/super8filmMaker"
+						target="_blank"><i class="glyphicon glyphicon-info-sign"></i> もっと詳しく</a>
 					</div>
 					<div class="col-sm-6">
 						<div class="alert alert-info" style="height: 100%;">
 							<h4>Download</h4>
 							<ul style="list-style-type:none;margin:0;padding:0;">
 								<li>
-									<a href="https://www.dropbox.com/s/0ekm3h81fiow7s7/s8pm.zip?dl=0" target="_blank"><i class="glyphicon glyphicon-download-alt"></i> s8pm.zip</a>
+									<a href="https://www.dropbox.com/s/0ekm3h81fiow7s7/s8pm.zip?dl=0" target="_blank"><i class="glyphicon glyphicon-download-alt"></i> s8pm.zip</a> サイレントフィルム　安定版
+								</li>
+								<li>
+									<a href="https://github.com/gutugutu3030/super8filmMaker" target="_blank"><i class="glyphicon glyphicon-download-alt"></i> GitHub</a> サウンドフィルム　最新版
 								</li>
 							</ul>
-							<p><small>2016/4</small></p>
+							<p><small>2016/4~2016/5</small></p>
 						</div>
 					</div>
 				</div>
