--- a/contents/8mmFilm/index.html
+++ b/contents/8mmFilm/index.html
@@ -87,7 +87,7 @@
 		</section>
 		<section>
 			<div class="row">
-				<div class="col-sm-5">
+				<div class="col-sm-4">
 					<div class="thumbnail">
 						<img src="film.png">
 						<div class="caption">
@@ -95,11 +95,11 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-7">
+				<div class="col-sm-8">
 					<h2>製作方法</h2>
-					<p>まず，フィルム化に際して24fpsまたは18fpsの連番画像を用意する必要がある．筆者は<a href="http://www.xmedia-recode.de/index.html" target="_blank">XMedia Recode</a>を用いて対象動画のフレームレート変換を行った．そして<a href="http://www.sourcenext.com/product/sony/vegaspro/" target="_blank">sony vegas pro</a>を用いて連番画像化を行った．</p>
-                    <p>次に制作した連番画像を<a href="https://github.com/gutugutu3030/super8filmMaker" target="_blank">super8filmMaker</a>によってフィルムに変換する．super8filmMakerはProcessingを用いて製作した．super8filmMakerを起動すると画面が表示されるので，連番画像をすべてドラッグアンドドロップすることで，フィルムの形状をしたpdfまたはaiファイル（フィルムデータ）を出力することができる．</p>
-                    <p>次に出力されたフィルムデータをインクジェットプリンタでOHPシートに印刷する．使用したOHPシートは<a href="http://bungu.plus.co.jp/product/paper/inkjet/senyo.htm" target="_blank">プラス社のOHPシート</a>であり，使用したプリンタは<a href="http://cweb.canon.jp/e-support/faq/answer/inkjetmfp/74850-1.html" target="_blank">MG7130</a>である．</p>
+					<p>まず，フィルム化に際して24fpsまたは18fpsの連番画像を用意する必要がある．筆者はフリーソフト<a href="http://www.xmedia-recode.de/index.html" target="_blank">XMedia Recode</a>を用いて対象動画のフレームレート変換を行った．そして市販ソフト<a href="http://www.sourcenext.com/product/sony/vegaspro/" target="_blank">sony vegas pro</a>を用いて連番画像化を行った．</p>
+                    <p>次に制作した連番画像を自作ソフトである<a href="https://github.com/gutugutu3030/super8filmMaker" target="_blank">super8filmMaker</a>によってフィルムに変換する．super8filmMakerはProcessingを用いて製作した．super8filmMakerを起動すると画面が表示されるので，連番画像をすべてドラッグアンドドロップすることで，フィルムの形状をしたpdfまたはaiファイル（フィルムデータ）を出力することができる．</p>
+                    <p>次に出力されたフィルムデータをインクジェットプリンタでOHPシートに印刷する．使用したOHPシートは<a href="http://bungu.plus.co.jp/product/paper/inkjet/senyo.htm" target="_blank">プラス社のOHPシート</a>であり，使用したプリンタは<a href="http://cweb.canon.jp/e-support/faq/answer/inkjetmfp/74850-1.html" target="_blank">Canon MG7130</a>である．</p>
                     <p>最後にレーザーカッタを用いて印刷したフィルムのカッティングを行う．カッターを用いて手動でのカッティングも可能だが，今回は効率化を求めてレーザーカッタを使用した．</p>
 				</div>
 			</div>
@@ -116,7 +116,7 @@
 					<h2>結果と感想</h2>
                     <p>映像や（特に）音声が本物の8mmフィルムには及ばないクオリティとなった．実際の8mmはもっとよいクオリティなので，本物の8mmフィルムを再生する動画を見ることを推奨する．</p>
                     <p>8mm機材を提供してくれた祖父が製作所版に「DVDでよくね？」と言ってきたが，製作中に何度も「そう思う」と答えそうになった．</p>
-					<p>また，コンテンツにBad Appleを用いたのは要望があったからである．てか白黒フィルムは普通に売ってるんだからそっちで作れよ，と幾度となく思ったがコマ撮りの8mmカメラが無くても制作できるのがこの方式の利点かもしれない．</p>
+					<p>また，コンテンツにBad Appleを用いたのは要望があったからである．てか白黒フィルムは普通に売ってるんだからそっちで作れよ，と幾度となく思ったがコマ撮りの8mmカメラが無くても制作できるのがこの方式の利点かもしれない．次はカラーっぽい作品を作りたい．</p>
 				</div>
 			</div>
 		</section>
@@ -124,6 +124,9 @@
 			<ol>
 				<li>試行錯誤の過程
 					<a href="https://sites.google.com/site/gutugutu30/quanku-guan-xinai/8mmfirumuwozizuoshitahua" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
+				</li>
+				<li>Bad Apple フィルム
+					<a href="http://www.mediafire.com/download/9c97lh8qnpsyn2t/badapple_silent.pdf" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
 				</li>
 				<li>England, J. Inkjet Printed Film Process: Video frames printed onto transparency film and cut down to Super 8 or 16mm film dimensions. 2011.
 					<a href="http://jesseengland.net/index.php?/project/inkjet-printed-film-process/" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
