--- a/contents/8mmFilm/index.html
+++ b/contents/8mmFilm/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gutugutu3030 - OHPシートとインクジェットプリンタを用いた自作8mmフィルムの製作</title>
+	<title>gutugutu3030 - Bad Apple!! in 8mm Film</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -79,7 +79,7 @@
 				</div>
 				<div class="col-sm-6">
 					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1CRq5bLOMLU" frameborder="0" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TqPrpoFX_pE" frameborder="0" allowfullscreen></iframe>
 						frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
@@ -115,14 +115,14 @@
 				<div class="col-sm-4">
 					<h2>結果と感想</h2>
                     <p>映像や（特に）音声が本物の8mmフィルムには及ばないクオリティとなった．実際の8mmはもっとよいクオリティなので，本物の8mmフィルムを再生する動画を見ることを推奨する．</p>
-                    <p>8mm機材を提供してくれた祖父が製作所版に「DVDでよくね？」と言ってきたが，製作中に何度も「そう思う」と答えそうになった．</p>
-					<p>また，コンテンツにBad Appleを用いたのは要望があったからである．てか白黒フィルムは普通に売ってるんだからそっちで作れよ，と幾度となく思ったがコマ撮りの8mmカメラが無くても制作できるのがこの方式の利点かもしれない．次はカラーっぽい作品を作りたい．</p>
+                    <p>8mm機材を提供してくれた祖父が製作序盤に「DVDでよくね？」と言ってきたが，製作中に何度も「そう思う」と答えそうになった．</p>
+					<p>コンテンツにBad Appleを用いたのは要望があったからである．てか白黒フィルムは普通に売ってるんだからそっちで作れよ，と幾度となく思ったがコマ撮りの8mmカメラが無くても制作できるのがこの方式の利点かもしれない．次はカラーっぽい作品を作りたい．</p>
 				</div>
 			</div>
 		</section>
 			<h2>参考文献</h2>
 			<ol>
-				<li>試行錯誤の過程
+				<li>試行錯誤の過程（フィルムの詳細はこちら）
 					<a href="https://sites.google.com/site/gutugutu30/quanku-guan-xinai/8mmfirumuwozizuoshitahua" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
 				</li>
 				<li>Bad Apple フィルム
