--- a/contents/8mmFilm/index.html
+++ b/contents/8mmFilm/index.html
@@ -108,7 +108,7 @@
 			<div class="row">
 				<div class="col-sm-8">
 					<h2>制作上の注意</h2>
-					<p>今回，制作したフィルムは光学面積方式で音を録音したフィルムであるが，ノイズが酷くて特に高音がうまく再生ができなかった．これはプリンタの印刷精度に原因があるだけでなくフィルムにwavファイルの波形を印刷する際にも何らかのコツがあると筆者は考えている．例えば，波形データはただ大きく印刷しても音は大きくならず，逆に波形を小さくすることで音が少し大きくなる現象が確認された．また，高音が聞こえないためにイコライザで高音を限界まで大きくしたり，ダイナミックレンジを小さくするなどの波形編集を行っているが，まだうまく行っていない．そのため，今回の動画では音を合成している．<a href="https://www.youtube.com/watch?v=u9LW35ivHT8">一応，再生に失敗している動画も記す.</a></p>
+					<p>今回，制作したフィルムは光学面積方式で音を録音したフィルムであるが，ノイズが酷くて特に高音がうまく再生ができなかった．これはプリンタの印刷精度に原因があるだけでなくフィルムにwavファイルの波形を印刷する際にも何らかのコツがあると筆者は考えている．例えば，波形データはただ大きく印刷しても音は大きくならず，逆に波形を小さくすることで音が少し大きくなる現象が確認された．また，高音が聞こえないためにイコライザで高音を限界まで大きくしたり，ダイナミックレンジを小さくするなどの波形編集を行っているが，まだうまく行っていない．そのため，今回の動画では音を合成している．<a href="https://www.youtube.com/watch?v=u9LW35ivHT8" target="_blank">一応，再生に失敗している動画も記す.</a></p>
                     <p>OHPシートを用いた8mmフィルムの作成は<a href="http://jesseengland.net/index.php?/project/inkjet-printed-film-process/" target="_blank">England</a>も行っている．彼の16mmフィルム映像を見ると，レーザー方式よりインクジェット方式のプリンタを用いた方が良いと筆者が感じたため，今回はインクジェットプリンタを使用した．また，以下に述べることはOHPシートを使用する際の常識なのかもしれないが，一応記す．OHPシートには両面印刷できるものより片面のみ印刷できるものの方が印刷が綺麗であった印象があった．同じ理由で使用するインクジェットプリンタは顔料インクより染料インクを用いたものを使用することを強く推奨する．</p>
                     <p>レーザーカッターの火力は若干低めに設定することを推奨する．なぜならば，火力が強いとパーフォレーション（穴）の部分が壊れてしまうからである．ただし，火力を低めに設定するとパーフォレーションが切り取りきれず，手動でプチプチ穴を開ける手間が発生する．（当たり前ですが，OHPシートの種類を変更したらレーザーカッターの設定も変更する必要があることをお忘れなく．）</p>
 				</div>
