add movie links

--- a/contents/8mmFilm/index.html
+++ b/contents/8mmFilm/index.html
@@ -132,6 +132,21 @@
 					<a href="http://jesseengland.net/index.php?/project/inkjet-printed-film-process/" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
 				</li>
 			</ol>
+			<h2>動画</h2>
+			<ol>
+				<li>ニコニコ（音合成）
+					<a href="http://www.nicovideo.jp/watch/sm28787820" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
+				</li>
+				<li>ニコニコ（サイレント）
+					<a href="http://www.nicovideo.jp/watch/sm28817001" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
+				</li>
+				<li>youtube（音合成）
+					<a href="https://www.youtube.com/watch?v=TqPrpoFX_pE" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
+				</li>
+				<li>youtube（光学再生）
+					<a href="https://www.youtube.com/watch?v=u9LW35ivHT8" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
+				</li>
+			</ol>
 		</section>
 	</div>
 	<script src="../../js/jquery.min.js"></script>
